# dejavu

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  kill_all.sh  process_output.py  run_all.py
docs/: dejavu.md  dejavu_planner.md  dejavu_simulator.md  dejavulib.md  experiments.md  install.md
examples/cpp/bert/: CMakeLists.txt
examples/cpp/gpt/: gpt_example.cc
examples/cpp/gpt_fp8/: gpt_fp8_example.cc
examples/cpp/gptj/: gptj_example.cc
examples/cpp/gptneox/: gptneox_example.cc
examples/cpp/multi_gpu_gpt/: CMakeLists.txt  gpt_example_utils.cc  multi_gpu_gpt_async_example.cc  multi_gpu_gpt_example.cc  multi_gpu_gpt_interactive_example.cc
examples/pytorch/gpt/: api_worker_open.py  bloom_batch_maker.py  check_rebuild.cpp  controller_open_loop.py  encode_alpaca.py  encode_file.py  encode_lmsys_all.py  encode_lmsys_arena.py  encode_sharegpt.py  gpt_batch_maker.py  inference_wrapper.py  kill_by_port.py  kill_nompi.py  kill_proc.py  multi_gpu_gpt_example.py  requirement.txt
examples/pytorch/gpt/api/: api_client.py  api_server.py
examples/pytorch/gpt/api/protos/: api_server.proto  api_server_pb2.py  api_server_pb2_grpc.py
examples/pytorch/gpt/microbenchmarks/: get_ideal.py  parse_output.py  run_micro.py
examples/pytorch/gpt/utils/: bloom.py  comm.py  gpt.py  gpt_dv.py  huggingface_opt_convert.py  parallel_gpt.py  parallel_gpt_dv.py
scripts/: planner.py
scripts/process_experiments/: process_prompt_token_times.py  process_total_times.py
scripts/simulators/: planner.py  plot_simulations.py  simulate_all.py  simulator_baseline_trace.py  simulator_dv.py
scripts/traces/: baseline.json  baseline_es.json  baseline_trace.json  test.json
src/fastertransformer/kernels/: decoding_kernels.cu  decoding_kernels.h  gpt_kernels.cu  gpt_kernels.h
src/fastertransformer/layers/: DynamicDecodeLayer.cc
src/fastertransformer/layers/attention_layers/: GptContextAttentionLayer.cc  GptContextAttentionLayer.h  TensorParallelGptContextAttentionLayer.cc  TensorParallelGptContextAttentionLayer.h
src/fastertransformer/layers/sampling_layers/: BaseSamplingLayer.cc  TopKSamplingLayer.cu  TopPSamplingLayer.cu
src/fastertransformer/models/multi_gpu_gpt/: CMakeLists.txt  Controller.cc  Controller.h  ControllerClient.cc  ControllerClient.h  ParallelGpt.cc  ParallelGpt.h  ParallelGptContextDecoder.cc  ParallelGptContextDecoder.h  ParallelGptDVBaseline.cc  ParallelGptDVBaseline.h  ParallelGptDVBenchmark.cc  ParallelGptDVBenchmark.h  ParallelGptDVFT.cc  ParallelGptDVFT.h  ParallelGptDecoder.cc  StateStreamClient.cc  StateStreamClient.h  StateStreamServer.cc  StateStreamServer.h  ft_state.grpc.pb.cc  ft_state.grpc.pb.h  ft_state.pb.cc  ft_state.pb.h  ft_state.proto  state_stream.grpc.pb.cc  state_stream.grpc.pb.h  state_stream.pb.cc  state_stream.pb.h  state_stream.proto
src/fastertransformer/tf_op/gpt/: CMakeLists.txt
src/fastertransformer/th_op/: CMakeLists.txt
src/fastertransformer/th_op/bart/: BartDecoderOp.h  BartDecodingOp.h  BartEncoderOp.h
src/fastertransformer/th_op/bert/: BertOp.h
src/fastertransformer/th_op/common/: DynamicDecodeOp.cc
src/fastertransformer/th_op/deberta/: DebertaOp.h
src/fastertransformer/th_op/gpt/: CMakeLists.txt  GptOp.h
src/fastertransformer/th_op/gpt_fp8/: GptFp8Op.h
src/fastertransformer/th_op/gptneox/: GptNeoXOp.h
src/fastertransformer/th_op/multi_gpu_gpt/: CMakeLists.txt  ControllerWrapper.cc  ControllerWrapper.h  ParallelGptContextDecoderOp.cc  ParallelGptDecoderOp.cc  ParallelGptOp.cc  ParallelGptOp.h
src/fastertransformer/th_op/t5/: T5DecoderOp.h  T5DecodingOp.cc  T5EncoderOp.cc
src/fastertransformer/triton_backend/multi_gpu_gpt/: ParallelGptTritonModel.cc
src/fastertransformer/utils/: CMakeLists.txt  allocator.h  cache_utils.cc  cache_utils.h  mpi_utils.cc  mpi_utils.h  nccl_utils.cc  nccl_utils.h
tests/unittests/: test_context_decoder_layer.cu
